; ModuleID = '/home/carl/AnghaBench/vlc/modules/control/dbus/extr_dbus_tracklist.c_handle_tracklist.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/control/dbus/extr_dbus_tracklist.c_handle_tracklist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DBUS_INTERFACE_PROPERTIES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"Get\00", align 1
@GetProperty = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"GetAll\00", align 1
@GetAllProperties = common dso_local global i32 0, align 4
@DBUS_MPRIS_TRACKLIST_INTERFACE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [5 x i8] c"GoTo\00", align 1
@GoTo = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [9 x i8] c"AddTrack\00", align 1
@AddTrack = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [12 x i8] c"RemoveTrack\00", align 1
@RemoveTrack = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [18 x i8] c"GetTracksMetadata\00", align 1
@GetTracksMetadata = common dso_local global i32 0, align 4
@DBUS_HANDLER_RESULT_NOT_YET_HANDLED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @handle_tracklist(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* @DBUS_INTERFACE_PROPERTIES, align 4
  %8 = load i32, i32* @GetProperty, align 4
  %9 = call i32 @METHOD_FUNC(i32 %7, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* @DBUS_INTERFACE_PROPERTIES, align 4
  %11 = load i32, i32* @GetAllProperties, align 4
  %12 = call i32 @METHOD_FUNC(i32 %10, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %11)
  %13 = load i32, i32* @DBUS_MPRIS_TRACKLIST_INTERFACE, align 4
  %14 = load i32, i32* @GoTo, align 4
  %15 = call i32 @METHOD_FUNC(i32 %13, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 %14)
  %16 = load i32, i32* @DBUS_MPRIS_TRACKLIST_INTERFACE, align 4
  %17 = load i32, i32* @AddTrack, align 4
  %18 = call i32 @METHOD_FUNC(i32 %16, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i32 %17)
  %19 = load i32, i32* @DBUS_MPRIS_TRACKLIST_INTERFACE, align 4
  %20 = load i32, i32* @RemoveTrack, align 4
  %21 = call i32 @METHOD_FUNC(i32 %19, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0), i32 %20)
  %22 = load i32, i32* @DBUS_MPRIS_TRACKLIST_INTERFACE, align 4
  %23 = load i32, i32* @GetTracksMetadata, align 4
  %24 = call i32 @METHOD_FUNC(i32 %22, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.5, i64 0, i64 0), i32 %23)
  %25 = load i32, i32* @DBUS_HANDLER_RESULT_NOT_YET_HANDLED, align 4
  ret i32 %25
}

declare dso_local i32 @METHOD_FUNC(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
